Bug 460523 - Categories in Widget Explorer are not translated after updating to the latest Framework
Summary: Categories in Widget Explorer are not translated after updating to the latest...
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.99.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-10-16 09:32 UTC by Fushan Wen
Modified: 2023-06-03 03:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-10-16 09:32:07 UTC
SUMMARY
Translatable strings were removed in https://invent.kde.org/frameworks/plasma-framework/-/commit/7823b5b785f312bb59d1383036b2f7768e54adc5


STEPS TO REPRODUCE
1. Open Widget Explorer
2. Click the category button
3. See the categories

OBSERVED RESULT
Categories are not translated

EXPECTED RESULT
Categories are translated

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.99
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Alexander Lohnau 2022-10-16 10:49:51 UTC
It seems that we did not use the strings in plasma-frameworks, but relied on the translations being present in the translation catalog. This should be fixed in the widget explorer.
Comment 2 Fushan Wen 2022-10-16 11:40:58 UTC
(In reply to Alexander Lohnau from comment #1)
> It seems that we did not use the strings in plasma-frameworks, but relied on
> the translations being present in the translation catalog. This should be
> fixed in the widget explorer.

But for KF6 only? Because currently the widget explorer already depends on the translations from plasma-framework.
Comment 3 Nate Graham 2022-10-17 18:08:20 UTC
We can have it look in the plasma-framework translation catalog for these strings, I think. Localization folks may be able to provide more details and guidance.
Comment 4 Bug Janitor Service 2022-10-20 15:15:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2241
Comment 5 Alexander Lohnau 2023-05-20 16:37:51 UTC
I will try to work on a proper fix
Comment 6 Bug Janitor Service 2023-05-21 07:40:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2945
Comment 7 Alexander Lohnau 2023-05-27 06:58:32 UTC
Git commit a02c08234ea3e82f38868e5f1a92409fd3729627 by Alexander Lohnau.
Committed on 27/05/2023 at 06:58.
Pushed by alex into branch 'master'.

Widgetexplorer: Properly handle translations for applet categories

They used to be in plasma-frameworks but were completely unused there,
but we depended on them being in the .po file.

M  +43   -6    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/a02c08234ea3e82f38868e5f1a92409fd3729627
Comment 8 Alexander Lohnau 2023-05-27 07:03:29 UTC
Git commit 7883535cfbeb63b775f50335607d8cec375ab7fe by Alexander Lohnau.
Committed on 27/05/2023 at 07:03.
Pushed by alex into branch 'Plasma/5.27'.

Widgetexplorer: Properly handle translations for applet categories

They used to be in plasma-frameworks but were completely unused there,
but we depended on them being in the .po file.


(cherry picked from commit a02c08234ea3e82f38868e5f1a92409fd3729627)

M  +43   -6    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7883535cfbeb63b775f50335607d8cec375ab7fe