widgetexplorer: list categories for extraction by intltool

BUG: 460523
FIXED-IN: 5.27